--- a/public/global.css
+++ b/public/global.css
@@ -1,11 +1,14 @@
 html {
   box-sizing: border-box;
+  /* background-color: var(--bluedarken70); */
+  background-color: var(--bluedarken70);
+  background-image: linear-gradient(147deg, var(--bluedarken70) 0%, #04619f 74%);
 }
 
 *{
+  font-family: 'Colossalis';
   padding: 0;
   margin: 0;
-  color: var(--bluedarken70);
   user-select: none;
   caret-color: transparent;
 }
@@ -20,29 +23,21 @@ body, .fullScreen{
 }
 
 @font-face {
-  font-family: 'Coverack';
-  src: url('/fonts/Coverack/Coverack Regular/Coverack Regular.ttf');
+  font-family: 'Colossalis';
+  src: url('/fonts/Colossalis Regular/Colossalis Regular.otf');
 }
 
 /* https://maketintsandshades.com/#005EB8 */
 :root{
   --blueroot: #005eb8;
   --bluelighten90: #e6eff8;
+  --bluelighten30: #4d8ecd;
+  --bluelighten50: #80afdc;
+  --bluelighten60: #99bfe3;
+  --bluelighten70: #b3cfea;
   --bluedarken70: #001c37;
   --bluedarken60: #00264a;
   --bluedarken40: #00386e;
   --grayshadow: #555;
   --gold: #DBA632;
-}
-
-button{
-  border: 1px solid var(--bluelighten90);
-  background-color: var(--bluedarken70);
-  color: white;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-button:hover{
-  background-color: var(--bluedarken60);
 }
