updated the AttackViews animations and styled for different screen styles. fixed the bomb overflowing bug on the pass screen

--- a/public/global.css
+++ b/public/global.css
@@ -39,5 +39,6 @@ body, .fullScreen{
   --bluedarken60: #00264a;
   --bluedarken40: #00386e;
   --grayshadow: #555;
+  --red: #7B1F4B;
   --gold: #DBA632;
 }
